Switch from Gemini to Groq Llama Vision API for faster AI detection (10x speed improvement)

--- a/python_ml_service/.env.example
+++ b/python_ml_service/.env.example
@@ -1,5 +1,9 @@
 # Environment Variables for Python ML Service
 
+# Groq API Key for AI Vision Detection (Llama 3.2 Vision)
+# Get your free API key at: https://console.groq.com/keys
+GROQ_API_KEY=your_groq_api_key_here
+
 # Application Settings
 HOST=0.0.0.0
 PORT=8001
