--- a/python_ml_service/requirements.txt
+++ b/python_ml_service/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.24.0
 torch==2.1.0
 torchvision==0.16.0
 timm==0.9.12
+numpy==1.24.3
 Pillow==10.1.0
 python-multipart==0.0.6
 pydantic==2.5.0
